[gd_scene load_steps=4 format=3 uid="uid://6ovk4ktgy47p"]

[ext_resource type="Texture2D" uid="uid://crgluv5il4vka" path="res://resources/images/menubackground.png" id="1_ecrvq"]
[ext_resource type="Script" path="res://scripts/option_menu.gd" id="1_mfwoo"]

[sub_resource type="CanvasTexture" id="CanvasTexture_aify4"]

[node name="optionMenu" type="Node"]
script = ExtResource("1_mfwoo")

[node name="BackgroundRect" type="TextureRect" parent="."]
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
texture = ExtResource("1_ecrvq")

[node name="MarginContainer" type="MarginContainer" parent="."]
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
theme_override_constants/margin_left = 10
theme_override_constants/margin_top = 10
theme_override_constants/margin_right = 10
theme_override_constants/margin_bottom = 10

[node name="TransparentRect" type="TextureRect" parent="MarginContainer"]
modulate = Color(0, 0, 0, 0.603922)
layout_mode = 2
texture = SubResource("CanvasTexture_aify4")

[node name="Control" type="Control" parent="."]
layout_mode = 3
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2

[node name="HBoxContainer" type="HBoxContainer" parent="Control"]
layout_mode = 1
anchors_preset = 8
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
offset_left = -20.0
offset_top = -20.0
offset_right = 20.0
offset_bottom = 20.0
grow_horizontal = 2
grow_vertical = 2

[node name="Label" type="VBoxContainer" parent="Control/HBoxContainer"]
layout_mode = 2

[node name="Fullscreen" type="Label" parent="Control/HBoxContainer/Label"]
layout_mode = 2
text = "Fullscreen"

[node name="Borderless" type="Label" parent="Control/HBoxContainer/Label"]
layout_mode = 2
text = "Borderless"

[node name="VSync" type="Label" parent="Control/HBoxContainer/Label"]
layout_mode = 2
text = "VSync"

[node name="Checks" type="VBoxContainer" parent="Control/HBoxContainer"]
layout_mode = 2

[node name="Fullscreen" type="CheckBox" parent="Control/HBoxContainer/Checks"]
layout_mode = 2

[node name="Borderless" type="CheckBox" parent="Control/HBoxContainer/Checks"]
layout_mode = 2

[node name="VSync" type="OptionButton" parent="Control/HBoxContainer/Checks"]
layout_mode = 2
item_count = 4
selected = 1
popup/item_0/text = "Disabled"
popup/item_0/id = 0
popup/item_1/text = "Enabled"
popup/item_1/id = 1
popup/item_2/text = "Adaptive"
popup/item_2/id = 2
popup/item_3/text = "Mailbox"
popup/item_3/id = 3

[node name="Button" type="Button" parent="."]
anchors_preset = 7
anchor_left = 0.5
anchor_top = 1.0
anchor_right = 0.5
anchor_bottom = 1.0
offset_left = -114.0
offset_top = -76.0
offset_right = 106.0
offset_bottom = -14.0
grow_horizontal = 2
grow_vertical = 0
text = "Back"

[connection signal="toggled" from="Control/HBoxContainer/Checks/Fullscreen" to="." method="_on_fullscreen_toggled"]
[connection signal="toggled" from="Control/HBoxContainer/Checks/Borderless" to="." method="_on_borderless_toggled"]
[connection signal="item_selected" from="Control/HBoxContainer/Checks/VSync" to="." method="_on_v_sync_item_selected"]
[connection signal="pressed" from="Button" to="." method="_on_button_pressed"]
